# usman_rend

./: README.md  pyproject.toml
mysite/: db.sqlite3
mysite/account/migrations/: 0001_initial.py
mysite/blog/migrations/: 0001_initial.py
mysite/mysite/: settings.py  urls.py
mysite/templates/: base.html
mysite/templates/account/: about.html  landing.html
