[tool.poetry]
name = "usman-rend"
version = "0.1.0"
description = ""
authors = ["Usman Musa <usmanmusa1920@gmail.com>"]
readme = "README.md"
packages = [{include = "usman_rend"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2.2"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
